# llm-pdf-quiz-generator

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml
src/: config.py  export.py  extraction.py  generator.py
